# tkimgloader

./: .coveragerc  .env_vars  .gitignore  .pylintrc  .sonarcloud.properties  .travis.yml  README.md  eric.json  pytest.ini  requirements.txt  setup.cfg  test.json
dev/: profile_PYTHON_PROG.bat  run_linters.bat  run_linters.sh  run_tests.bat  run_tests.sh
dev/Linting/: RunBandit.bat  RunBandit.sh  RunMyPy.bat  RunMyPy.sh  RunPycodestyle.bat  RunPycodestyle.sh  RunPydocstyle.bat  RunPydocstyle.sh  RunPylint.bat  RunPylint.sh
dev/Packaging/: upload_to_pypi.bat  upload_to_pypi_test.bat
dev/Testing/: RunPytest.bat  RunPytest.sh
tests/tkimgloader/: test_editor.py  test_imgloader.py  test_project_logger.py
tests/tkimgloader/compoents/: test_buttons.py  test_text.py
tests/tkimgloader/widgets/: test_text.py  test_text_widget.py  test_widgets.py
tests/tkimgloader_tests/: test_editor.py  test_imgloader.py  test_project_logger.py
tests/tkimgloader_tests/compoents/: test_buttons.py  test_text.py
tests/tkimgloader_tests/widgets/: test_image_button_widget.py  test_input_box.py  test_table_widget.py  test_text_widget.py  test_widgets.py
tkimgloader/: editor.py  imgloader.py  widgets.py
tkimgloader/logs/: test_log.txt
tkimgloader/scripts/: editor.py
